objects/AccountContactRole__c.object
<CustomObject>
    <description>Junction between Contact and Account</description>
    <label>Account Contact Role</label>
    <nameField>
        <displayFormat>AcctCR-{000000000}</displayFormat>
        <label>Account Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ContactRoleKey__c</fullName>
        <description>Combination of PKI SAP Contact ID and PKI SAP Customer Number and Function</description>
        <externalId>true</externalId>
        <label>Contact Role Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related SAP Contacts</relationshipLabel>
        <relationshipName>Related_SAP_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Contacts__c</fullName>
        <label>Related Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Contact_ID__c</fullName>
        <label>PKI SAP Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Customer_Number__c</fullName>
        <label>PKI SAP Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Function__c</fullName>
        <description>Most of the time, the value will be AP</description>
        <label>PKI SAP Partner Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Cannot_Edit_Fields</fullName>
        <active>true</active>
        <description>Cannot edit SAP Customer Number unless you have a specific profile.</description>
        <errorConditionFormula>AND($Setup.Rules_Execution__c.Run__c, 
 OR(ISCHANGED(RelatedAccount__c),
  ISCHANGED( Related_Contacts__c)), 
 NOT($Profile.Name = &apos;Application Integration profiles&apos;))</errorConditionFormula>
        <errorMessage>You cannot edit fields unless you have a specific profile</errorMessage>
    </validationRules>
</CustomObject>